[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/font/MainFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/GUI/button.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GUI/home_GUI/home_GUI.gd" type="Script" id=3]
[ext_resource path="res://scenes/GUI/home_GUI/games_panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/GUI/home_GUI/shop_panel.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/GUI/home_GUI/breeding_panel.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GUI/home_GUI/hatchery_panel.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/font/TitleFont.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.24915
margin_bottom = -1.24915
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="."]

[node name="Time" type="Label" parent="Node"]
margin_left = 8.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "Time:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="Node"]
margin_left = 8.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "Coins: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Games" parent="Node" instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -608.0
margin_top = 8.0
margin_right = -463.0
margin_bottom = 48.0

[node name="Label" parent="Node/Games/CenterContainer" index="0"]
margin_left = 40.0
margin_top = 9.0
margin_right = 104.0
margin_bottom = 30.0
text = "Games"

[node name="Shop" parent="Node" instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -456.0
margin_top = 8.0
margin_right = -311.0
margin_bottom = 48.0

[node name="Label" parent="Node/Shop/CenterContainer" index="0"]
margin_left = 48.0
margin_top = 9.0
margin_right = 97.0
margin_bottom = 30.0
text = "Shop"

[node name="Breeding" parent="Node" instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -304.0
margin_top = 8.0
margin_right = -159.0
margin_bottom = 48.0

[node name="Label" parent="Node/Breeding/CenterContainer" index="0"]
margin_left = 29.0
margin_top = 9.0
margin_right = 115.0
margin_bottom = 30.0
text = "Breeding"

[node name="Hatchery" parent="Node" instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -152.0
margin_top = 8.0
margin_right = -7.0
margin_bottom = 48.0

[node name="Label" parent="Node/Hatchery/CenterContainer" index="0"]
margin_left = 28.0
margin_top = 9.0
margin_right = 116.0
margin_bottom = 30.0
text = "Hatchery"

[node name="MenuPanel" type="Panel" parent="Node"]
visible = false
margin_left = 128.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 512.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamesPanel" parent="Node/MenuPanel" instance=ExtResource( 4 )]
visible = false

[node name="ShopPanel" parent="Node/MenuPanel" instance=ExtResource( 5 )]
visible = false

[node name="BreedingPanel" parent="Node/MenuPanel" instance=ExtResource( 6 )]
visible = false

[node name="HatcheryPanel" parent="Node/MenuPanel" instance=ExtResource( 7 )]
visible = false

[node name="ESC" parent="Node/MenuPanel" instance=ExtResource( 2 )]
margin_left = 680.0
margin_top = 24.0
margin_right = 737.0
margin_bottom = 56.0

[node name="Label" parent="Node/MenuPanel/ESC/CenterContainer" index="0"]
margin_left = 9.0
margin_top = 5.0
margin_right = 48.0
margin_bottom = 26.0
text = "ESC"

[node name="BllobPanel" type="Panel" parent="Node"]
visible = false
margin_left = 128.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 512.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Node/BllobPanel"]
margin_left = 32.0
margin_top = 32.0
margin_right = 167.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 8 )
text = "Bllob"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="Node/BllobPanel"]
margin_left = 72.0
margin_top = 136.0
margin_right = 171.0
margin_bottom = 157.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Health:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hunger" type="Label" parent="Node/BllobPanel"]
margin_left = 208.0
margin_top = 136.0
margin_right = 316.0
margin_bottom = 157.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hunger:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Happiness" type="Label" parent="Node/BllobPanel"]
margin_left = 352.0
margin_top = 136.0
margin_right = 490.0
margin_bottom = 157.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Happiness:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Age" type="Label" parent="Node/BllobPanel"]
margin_left = 72.0
margin_top = 96.0
margin_right = 117.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Age: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strength" type="Label" parent="Node/BllobPanel"]
margin_left = 72.0
margin_top = 208.0
margin_right = 158.0
margin_bottom = 229.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Strength:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Agility" type="Label" parent="Node/BllobPanel"]
margin_left = 72.0
margin_top = 256.0
margin_right = 165.0
margin_bottom = 277.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Agility:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Staminer" type="Label" parent="Node/BllobPanel"]
margin_left = 72.0
margin_top = 232.0
margin_right = 161.0
margin_bottom = 253.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Staminer:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ESC" parent="Node/BllobPanel" instance=ExtResource( 2 )]
margin_left = 680.0
margin_top = 24.0
margin_right = 737.0
margin_bottom = 56.0

[node name="Label" parent="Node/BllobPanel/ESC/CenterContainer" index="0"]
margin_left = 9.0
margin_top = 5.0
margin_right = 48.0
margin_bottom = 26.0
text = "ESC"
[connection signal="pressed" from="Node/Games" to="." method="_on_MenuPanel_event" binds= [ "games" ]]
[connection signal="pressed" from="Node/Shop" to="." method="_on_MenuPanel_event" binds= [ "shop" ]]
[connection signal="pressed" from="Node/Breeding" to="." method="_on_MenuPanel_event" binds= [ "breeding" ]]
[connection signal="pressed" from="Node/Hatchery" to="." method="_on_MenuPanel_event" binds= [ "hatchery" ]]
[connection signal="pressed" from="Node/MenuPanel/ESC" to="." method="_on_MenuPanel_event" binds= [ "exit" ]]

[editable path="Node/Games"]

[editable path="Node/Shop"]

[editable path="Node/Breeding"]

[editable path="Node/Hatchery"]

[editable path="Node/MenuPanel/ESC"]

[editable path="Node/BllobPanel/ESC"]
